--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1 data-en="PEOPLE CENTRED<br>DATA" data-ar="بيانات تتمحور<br>حول الإنسان">PEOPLE CENTRED<br>DATA</h1>
+            <h1 data-en="PEOPLE CENTRED<br>DATA" data-ar="بيانات تتمحور<br>حول الإنسان">PEOPLE CENTRED<br>ECONOMICS</h1>
             <div class="hero-image">
                 <img src="tuareg.jpg" alt="Tuareg desert image">
             </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div>
                     <p data-en="I'm a Master's student at LSE and an artist." data-ar="أنا طالب ماجستير في LSE وفنان.">I'm a Master's student at LSE and an artist.</p>
-                    <p data-en="I explore where data meets human stories, where economic forces shape lives, and where research honors the people behind the numbers." data-ar="أستكشف حيث تلتقي البيانات بالقصص الإنسانية، حيث تشكل القوى الاقتصادية الحياة، وحيث يكرم البحث الناس وراء الأرقام.">I explore where data meets human stories, where economic forces shape lives, and where research honors the people behind the numbers.</p>
+                    <p data-en="I explore where economics meets human stories, where economic forces shape lives, and where research become accesible and honors people." data-ar="أستكشف حيث تلتقي البيانات بالقصص الإنسانية، حيث تشكل القوى الاقتصادية الحياة، وحيث يكرم البحث الناس وراء الأرقام.">I explore where economics meets human stories, where economic forces shape lives, and where research become accesible and honors people.</p>
                     <p data-en="My work sits at the intersection of economics, art, and people-centered research." data-ar="يقع عملي عند تقاطع الاقتصاد والفن والبحث المتمحور حول الإنسان.">My work sits at the intersection of economics, art, and people-centered research.</p>
                 </div>
             </div>
@@ -58,19 +58,19 @@
             <div class="links-grid">
                 <div class="link-item">
                     <h3 data-en="PORTFOLIO" data-ar="المحفظة">PORTFOLIO</h3>
-                    <p data-en="My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module." data-ar="البحوث الاقتصادية وتحليل البيانات والدراسات المتمحورة حول الإنسان.">My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module.</p>
+                    <p data-en="My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module (Will be completed by January)." data-ar="البحوث الاقتصادية وتحليل البيانات والدراسات المتمحورة حول الإنسان.">My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module (Will be fully completed by January).</p>
                     <a href="portfolio_vis.html" data-en="VIEW PORTFOLIO" data-ar="عرض المحفظة">VIEW PORTFOLIO</a>
                 </div>
 
                 <div class="link-item">
                     <h3 data-en="PROJECTS" data-ar="المشاريع">PROJECTS</h3>
-                    <p data-en="A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy" data-ar="دراسات حالة تجمع بين علم البيانات والاقتصاد والبحث الإثنوغرافي.">A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy</p>
-                    <a href="project.html" data-en="VIEW PROJECT" data-ar="عرض المشاريع">VIEW PROJECTS</a>
+                    <p data-en="A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy (Will be completed by January)." data-ar="دراسات حالة تجمع بين علم البيانات والاقتصاد والبحث الإثنوغرافي.">A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy (Will be completed by January).</p>
+                    <a href="pending.html" data-en="VIEW PROJECT" data-ar="عرض المشاريع">VIEW PROJECTS</a>
                 </div>
 
                 <div class="link-item">
                     <h3 data-en="ART" data-ar="الفن">ART</h3>
-                    <p data-en="Visual work exploring data as narrative and numbers as human stories." data-ar="أعمال بصرية تستكشف البيانات كسرد والأرقام كقصص إنسانية.">Visual work exploring data as narrative and numbers as human stories.</p>
+                    <p data-en="Visual work exploring the intangible human stories economics and data can't tell" data-ar="أعمال بصرية تستكشف البيانات كسرد والأرقام كقصص إنسانية.">Visual work exploring the intangible human stories economics and data can't tell. </p>
                     <a href="/art" data-en="VIEW ART" data-ar="عرض الفن">VIEW ART</a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p data-en="© 2025 Riad Ghoneim. People Centred Data." data-ar="© 2025 رياض غنيم. بيانات تتمحور حول الإنسان.">© 2025 Riad Ghoneim. People Centred Data.</p>
+            <p data-en="© 2025 Riad Ghoneim. People Centred Economics." data-ar="© 2025 رياض غنيم. بيانات تتمحور حول الإنسان.">© 2025 Riad Ghoneim. People Centred Economics.</p>
         </div>
     </footer>
 
