--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p data-en="© 2025 Riad Ghoneim. People Centred Economics." data-ar="© 2025 رياض غنيم. بيانات تتمحور حول الإنسان.">© 2025 Riad Ghoneim. People Centred Economics.</p>
+            <p data-en="© 2025 Riad Ghoneim. MSc London School of Economics. People Centred Economics." data-ar="© 2025 رياض غنيم.">© 2025 Riad Ghoneim. People Centred Economics.</p>
         </div>
     </footer>
 
