--- a/pending.html
+++ b/pending.html
@@ -343,7 +343,7 @@
             <h3 class="text-xl font-normal text-white mb-6">Purchasing Power</h3>
             <div class="flex flex-col items-center">
                 <div class="meter-container">
-                    <img src="taxi_meter_base.png" alt="Taxi Meter Base" class="base">
+                    <img src="taxi_meter_1.png" alt="Taxi Meter Base" class="base">
                     <div class="meter-digits" id="meterDigits"></div>
                 </div>
                 <div class="text-center mt-4">
@@ -486,10 +486,10 @@
         let currentFrame = 0;
         let animationInterval = null;
         const frames = [
-            'taxi_meter_base.png',
-            'taxi_meter_frame2.png',
-            'taxi_meter_frame3.png',
-            'taxi_meter_frame4.png'
+            'meter_horse_1.png',
+            'meter_horse_2.png',
+            'meter_horse_3.png',
+            'meter_horse_4.png'
         ];
 
         function updateMeter(value) {
@@ -655,3 +655,4 @@
     </script>
 </body>
 </html>
+
